# blenderpy

./: .gitignore  build.py  pyproject.toml
blenderpy/: __init__.py  post_install.py  pre_uninstall.py
tests/: test_bpy.py  test_concurrent_futures.py
